If  was used instead of try-catch and swagger update.
